Bug 486481 - No scrolling
Summary: No scrolling
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Dashboard widget (other bugs)
Version First Reported In: 6.2.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Tom
URL:
Keywords: regression
: 495928 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-05-03 01:17 UTC by Justin
Modified: 2025-03-24 23:23 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin 2024-05-03 01:17:20 UTC
SUMMARY
Cannot scroll with trackpad or use arrow keys to navigate.

STEPS TO REPRODUCE
1. Launch Application Dashboard
2. Go to All Aplications and try to scroll.
3. No movement apart from the scroll bar only.
4. Use arrow key to move through applications - no response.

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Justin 2024-05-03 01:20:44 UTC
Hmm, how to edit the original??

Extra notes:
Plasma 6.04
Same behaviour on Wayland and Xorg.
Comment 2 Nate Graham 2024-05-03 19:43:36 UTC
Can reproduce with current git master.
Comment 3 Alan Rempel 2024-05-13 19:11:12 UTC
For me this behaviour is inconsistent -- sometimes when I scroll with my trackpad, the applications grid scrolls, and sometimes it does not. But when my cursor is on or near the scrollbar, scrolling always works. (openSUSE Tumbleweed 20240510, KDE Plasma 6.0.4, KDE Frameworks 6.1.0, Qt 6.7.0)
Comment 4 Justin 2024-05-13 23:30:20 UTC
(In reply to Alan Rempel from comment #3)
> For me this behaviour is inconsistent -- sometimes when I scroll with my
> trackpad, the applications grid scrolls, and sometimes it does not. But when
> my cursor is on or near the scrollbar, scrolling always works. (openSUSE
> Tumbleweed 20240510, KDE Plasma 6.0.4, KDE Frameworks 6.1.0, Qt 6.7.0)

Yes! I have since discovered that scrolling will work for a few seconds at times then stop again.

Also note, that one the same device on another drive with Kubuntu the scrolling works fine in the application.
Comment 5 Bug Janitor Service 2025-03-23 01:34:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5333
Comment 6 Tom 2025-03-23 03:10:57 UTC
*** Bug 495928 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2025-03-24 23:23:11 UTC
Git commit 4f9b1a69c8105b0c59e667e6a242f821b51208b4 by Nate Graham, on behalf of Tomislav Pap.
Committed on 24/03/2025 at 23:23.
Pushed by ngraham into branch 'master'.

Fix Scroll Wheel issue in AllApps submenu of Application Dashboard

Scroll with mouse wheel was problematic in AllApps subsection. It worked
partially, abruptly stopping when hovering over app icons, or just
during mouse wheel scrolling.

The problem is that QQuick WheelInterceptor::findwheelArea() never entered
into its if statement because there are 3 children elements of QML parent,
and their z axis values are 1, 0, 0 respectfully.
FIXED-IN: 6.4.0

M  +1    -1    applets/kicker/plugin/wheelinterceptor.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/4f9b1a69c8105b0c59e667e6a242f821b51208b4