applets/kicker/plugin/wheelinterceptor.cpp
@@ -51,7 +51,7 @@ QQuickItem *WheelInterceptor::findWheelArea(QQuickItem *parent) const
         // HACK: ScrollView adds the WheelArea below its flickableItem with
         // z==-1. This is reasonable non-risky considering we know about
         // everything else in there, and worst case we break the mouse wheel.
-        if (child->z() == -1) {
+        if (child->z() >= -1) {
             return child;
         }
     }
